--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "sanan-84/basicdb-example",
+    "name": "webservis/basicdb",
     "description": "Example project using the basicdb package",
     "type": "project",
     "license": "MIT",
@@ -15,8 +15,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Sanan-84\\basicdb\\": "src/"
-
+            "Webservis\\": "src/"
         }
     }
 }
