--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "webservis/basicdb",
     "description": "Example project using the basicdb package",
+    "version": "1.1.0",
     "keywords": ["pdo", "mysql","sql"],
     "type": "project",
     "license": "GPL-3.0",
